--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^3.0.7",
     "@ai-sdk/rsc": "^2.0.49",
     "@auth/prisma-adapter": "^2.11.1",
-    "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^6.19.2",
     "@prisma/client": "^6.19.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -29,7 +27,6 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "ai": "^6.0.49",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,9 +36,9 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.25.0",
     "html2pdf.js": "^0.14.0",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
-    "motion": "^12.25.0",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "openai": "^6.16.0",
@@ -49,7 +46,6 @@
     "react": "19.2.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.2.3",
-    "react-hook-form": "^7.70.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.6.0",
