--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "eslint-plugin-tailwindcss": "^3.18.2",
     "prisma": "^6.19.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
